--- a/sentimentAnalyzeServer/manifest.yml
+++ b/sentimentAnalyzeServer/manifest.yml
@@ -1,7 +1,6 @@
----
 applications:
 - path: .
-  name: sentiment-analyzer #change to be unique in IBM Cloud
+  name: aniket-gupta-23-sentiment-analyzer #change to be unique in IBM Cloud
   buildpack: sdk-for-nodejs
   memory: 256M
   instances: 1
